[package]
name = "arena-alloc"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A small arena allocator with a static backing store and ability to allocate arbitrary types."
repository = "https://github.com/ericbreyer/rustarena"
authors = ["Eric Breyer <eric.breyer@gmail.com>"]
keywords = ["arena", "allocator", "embedded", "memory", "no-std"]
categories = ["embedded", "memory-management", "no-std", "no-std::no-alloc", ]


[dependencies]
